--- a/src/assets/styles/components/cards.scss
+++ b/src/assets/styles/components/cards.scss
@@ -17,6 +17,7 @@
     box-shadow: 0px 0px 21px -10px rgba(110,110,110,0.5);
     transition: all 0.2s ease;
     margin-bottom: 2em;
+    background-color: white;
     @include for-size($mobile, $desktop) {
       width: 20em;
     }
