--- a/src/assets/styles/components/_hero.scss
+++ b/src/assets/styles/components/_hero.scss
@@ -19,9 +19,8 @@
     font-size: 3em;
     line-height: 59.6px;
     text-align: left;
-    color: $color-text;
     margin-bottom: 0.4em;
-    //color: white;
+    color: $color-offwhite;
 
     @include for-size($mobile, $desktop) {
       font-size: 2.7em;
@@ -31,14 +30,14 @@
       max-width: 480px;
     }
   }
+
   p {
     font-family: "Source Sans Pro", sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 1.4em;
     line-height: 30.17px;
     text-align: left;
-    color: $color-text;
-    //color: white;
+    color: #d2d2d2;
 
     @include for-size($mobile, $desktop) {
       font-size: 1.2em;
@@ -67,6 +66,7 @@
 
       &:hover {
         box-shadow: $button-shadow-hover;
+        background-color: #f2f2f2;
       }
 
       &:active {
