--- a/src/assets/styles/utils/_variables.scss
+++ b/src/assets/styles/utils/_variables.scss
@@ -3,6 +3,7 @@ $color-koios-blue: #2f12dc;
 $color-koios-pink: #ff0bac;
 $color-koios-dark-grey: #424242;
 $color-text: #262626;
+$color-offwhite: #f2f2f2;
 
 /* Secondairy colors */
 $koios-green--hover:      #20ffb1;
