fixed comments and console warning

--- a/src/assets/styles/components/_cta.scss
+++ b/src/assets/styles/components/_cta.scss
@@ -1,4 +1,4 @@
-.ctaContainer {
+.cta-container {
   background: linear-gradient(120deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 55%, rgba(213,12,182,1) 100%);
 
   @include for-size($tablet) {
