--- a/src/assets/styles/utils/_variables.scss
+++ b/src/assets/styles/utils/_variables.scss
@@ -27,6 +27,7 @@ $button-active-color: #fafafa;
 
 /* Screen size definitions */
 $mobile: 320px;
+$mobile-large: 427px;
 $tablet: 480px;
 $desktop: 769px;
 
