--- a/src/assets/styles/components/_hero.scss
+++ b/src/assets/styles/components/_hero.scss
@@ -62,7 +62,7 @@
       transition: all 0.2s ease;
       display: flex;
       flex-flow: row;
-      background-color: white;
+      background-color: #f2f2f2;
       align-items: center;
 
       &:hover {
