finished etherscan and slide in animation

--- a/src/assets/styles/koios.scss
+++ b/src/assets/styles/koios.scss
@@ -3,6 +3,7 @@
 /* Utils */
 @import "./utils/mixins";
 @import "./utils/variables";
+@import "./utils/animations";
 
 /* Base */
 @import "./base/reset";
