--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -4,6 +4,7 @@
   align-items: flex-start;
   position: fixed;
   top: 0;
+  z-index: 1000;
   transition: background-color .25s ease;
 
   &--white {
